Added contributors and copyright information to README and updated MADAMIRA running instructions.